Add external database connection for postgres and mysql databases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+#datasource configurations
+spring.datasource.url=jdbc:mysql://localhost:3306/theoptimistic-hr
+spring.datasource.username=theoptimistic-hr
+spring.datasource.password=root123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# DDL generation
+spring.jpa.generate-ddl=true
+
+
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
