--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #datasource configurations
-spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11498102
-spring.datasource.username=sql11498102
-spring.datasource.password=IMKiGWiB7u
+spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11498606
+spring.datasource.username=sql11498606
+spring.datasource.password=PA81PZHm3n
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DDL generation
