--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #datasource configurations
-spring.datasource.url=jdbc:mysql://localhost:3306/theoptimistic-hr
-spring.datasource.username=theoptimistic-hr
-spring.datasource.password=root123
+spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11503305
+spring.datasource.username=sql11503305
+spring.datasource.password=Z2WeDNLXgs
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DDL generation
