--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #datasource configurations
-spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11503727
-spring.datasource.username=sql11503727
-spring.datasource.password=NjUXcY6la1
+spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11504850
+spring.datasource.username=sql11504850
+spring.datasource.password=KIeBEsYEQr
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DDL generation
