Fixed & Finished Basics of EinstellungenView

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #datasource configurations
-spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11504850
-spring.datasource.username=sql11504850
-spring.datasource.password=KIeBEsYEQr
+spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com/sql11508561
+spring.datasource.username=sql11508561
+spring.datasource.password=BkIXUVEQkt
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DDL generation
