--- a/package.json
+++ b/package.json
@@ -259,8 +259,8 @@
     "date-fns": "$date-fns",
     "lit": "$lit",
     "chokidar": "$chokidar",
-    "line-awesome": "$line-awesome",
-    "@vaadin/lit-renderer": "$@vaadin/lit-renderer"
+    "@vaadin/lit-renderer": "$@vaadin/lit-renderer",
+    "line-awesome": "$line-awesome"
   },
   "vaadin": {
     "dependencies": {
